Fix source link

--- a/index.pug
+++ b/index.pug
@@ -64,7 +64,6 @@ html
 
     .text-right.noprint
       button#downloadSVG Download SVG
-      a#download
 
     hr.noprint
 
@@ -89,4 +88,4 @@ html
       Check out <a href="https://erikdemaine.org/fonts/">other mathematical and
       puzzle fonts</a>. &bull; Feedback or not working?
       <a href="mailto:edemaine+fonts@mit.edu">Email Erik</a>. &bull;
-      <a href="https://github.com/edemaine/font-tetris">Source code on GitHub</a>.
+      <a href="https://github.com/edemaine/font-ada">Source code on GitHub</a>.
